--- a/src/Pages/Public/HomePage/HomePage.css
+++ b/src/Pages/Public/HomePage/HomePage.css
@@ -51,6 +51,8 @@ body {
   margin: 0;
   padding: 0;
   overflow: hidden;
+  opacity: 0.92;
+  filter: brightness(1.1)
 }
 
 .hero-background {
@@ -95,6 +97,7 @@ body {
 .navbar-links {
   display: flex;
   gap: 2rem;
+  margin-left: 39rem;
 }
 
 .nav-link {
@@ -133,21 +136,23 @@ body {
   padding: 0.5rem 1.25rem;
   background-color: var(--white);
   color: var(--black);
-  border-radius: 4px;
   text-decoration: none;
   font-size: 0.9rem;
   font-weight: 600;
   transition: all 0.3s ease;
+  margin-bottom: 0.2rem;
 }
 
 .auth-button:hover {
-  transform: translateY(-2px);
-  box-shadow: 0 4px 12px rgba(255, 255, 255, 0.2);
+  transform: translateY(-1px);
+  color: #000000;
+  background-color: #F3F7EC;
 }
 
 .login-icon {
-  width: 1rem;
-  margin-right: 0.5rem;
+  width: 0.7rem;
+  margin-right: 0.4rem;
+  margin-bottom: 0.3rem;
 }
 
 /* Hero Content */
@@ -189,9 +194,10 @@ body {
 }
 
 .hero-content.split-layout .hero-title {
-  font-size: 3.5rem;
+  font-size: 2rem;
   text-align: left;
   text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+  margin-bottom: 2rem;
 }
 
 .hero-content.split-layout .hero-description {
@@ -208,7 +214,9 @@ body {
 .hero-title {
   font-size: 3rem;
   font-weight: 700;
-  margin-bottom: 1.5rem;
+  margin-top: 4rem;
+  margin-bottom: 3rem;
+  margin-right: 3rem;
   line-height: 1.2;
   text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
 }
@@ -216,6 +224,7 @@ body {
 .hero-description {
   font-size: 1.2rem;
   line-height: 1.6;
+  margin-top: 2.5rem;
   margin-bottom: 2.5rem;
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
 }
@@ -223,21 +232,22 @@ body {
 .cta-button {
   display: inline-block;
   padding: 1rem 2.5rem;
-  background-color: var(--primary-blue);
-  color: var(--white);
+  background-color: #FFFFFF;
+  color: #000000;
   font-size: 1.1rem;
-  font-weight: 600;
+  font-weight: 500;
   text-decoration: none;
   border-radius: 4px;
   transition: all 0.3s ease;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
   align-self: center;
-  letter-spacing: 1px;
+  letter-spacing: 0.4px;
 }
 
 .cta-button:hover {
-  background-color: var(--primary-dark-blue);
-  transform: translateY(-3px);
+  color: #000000;
+  background-color: #F3F7EC;
+  transform: translateY(-1px);
   box-shadow: 0 6px 15px rgba(0, 0, 0, 0.25);
 }
 
@@ -273,6 +283,8 @@ body {
 .feature-card:hover {
   transform: translateY(-10px);
   box-shadow: 0 12px 40px rgba(0, 0, 0, 0.25);
+  background-color: rgba(255, 255, 255, 0.3);
+  
 }
 
 .feature-icon {
